# internal/handlers/generate.go
@@ -1,23 +1,21 @@
 package handlers
 
 import (
+	"fmt"
+
 	"github.com/gofiber/fiber/v2"
 	"github.com/telman03/ai-backend-generator/internal/builder"
+	"github.com/telman03/ai-backend-generator/internal/models"
 )
 
-type GenerateRequest struct {
-	Features []string `json:"features"`
-}
-
-// GenerateHandler godoc
+// Generate GenerateHandler godoc
 // @Summary Generate Go backend project
 // @Description Accepts selected features and returns a downloadable zip file
 // @Tags Generator
 // @Accept json
 // @Produce application/zip
 // @Security BearerAuth
-// @Param data body GenerateRequest true "Selected Features"
-// @Success 200 {file} file "ZIP file"
+// @Param data body models.GenerateRequest true "Selected Features"
 // @Router /generate [post]
 func Generate(c *fiber.Ctx) error {
 	userID := c.Locals("user_id")
@@ -25,13 +23,13 @@ func Generate(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "Unauthorized"})
 	}
 
-	var req GenerateRequest
+	var req models.GenerateRequest
 	if err := c.BodyParser(&req); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "Invalid request format"})
 	}
 
 	// Optionally log userID or track usage
-	// fmt.Printf("Generating project for user: %v\n", userID)
+	fmt.Printf("Generating project for user: %v\n", userID)
 
 	zipPath, err := builder.GenerateProject(req.Features)
 	if err != nil {
