# internal/models/requests.go
@@ -9,3 +9,7 @@ type LoginInput struct {
 	Email    string `json:"email" example:"user@example.com"`
 	Password string `json:"password" example:"password123"`
 }
+
+type GenerateRequest struct {
+	Features []string `json:"features"`
+}
